# fizz_buzz

./: README.md  main_1.c  main_15.c  main_2.c  main_3.c  makefile
.github/checker/: makefile  meson.build  test_derek  test_seventeen
.github/checker/test/: expected_output_seventeen.txt  main_1.c  main_seventeen.c  test_1.c  test_buzz.c  test_derek.c  test_five.c  test_fizz.c  test_fizzbuzz.c  test_number.c  test_seventeen.c  test_three.c
.github/checker/tests/: test_fifteen.c  test_seventeen.c
.github/checker/tests/test_1/: test_1.c
src/: fizz_buzz.c  fizz_buzz.h  fizz_buzz_in_c  fizz_buzz_in_c.c
src/fizz_buzz_in_c.dSYM/Contents/: Info.plist
src/fizz_buzz_in_c.dSYM/Contents/Resources/DWARF/: fizz_buzz_in_c
src/fizz_buzz_in_c.dSYM/Contents/Resources/Relocations/aarch64/: fizz_buzz_in_c.yml
